--- a/hd/lang/lexicon.txt
+++ b/hd/lang/lexicon.txt
@@ -11705,7 +11705,20 @@ sv: andra åtgärder
 tr: diğer eylem
 zh: 其他行動
 
-    PACS
+    other/other/other
+co: altru/altra/altra(u)
+de: anderer/andere/andere
+en: other/other/other
+es: otro/otra/otro
+fi: muuta/muuta/muuta
+fr: autre/autre/autre
+it: altro/altro/altro
+nl: overige/overige/overige
+no: annen/annen/annen
+pt: outro/outra/outro
+sv: annat/annat/annat
+
+PACS
 co: PACS
 de: verfestigte Lebensgemeinschaft
 en: Civil Marriage
