--- a/hd/lang/lexicon.txt
+++ b/hd/lang/lexicon.txt
@@ -11676,6 +11676,10 @@ sl: po strani %s
 sv: från %ss släktsida
 tr: %s tarafında
 
+    on %s's siblings side
+en: on %s's siblings side
+fr: du côté des frères et soeurs de %s
+
     on (day month year)
 af: op
 ar: يوم
